_config.yml: set default layout to "mine"
That way, pages don't need to specify it

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,10 @@ collections:
   posts_data:
     output: true
     permalink: /posts/:path
+defaults:
+  -
+    scope:
+      # "" is for every file
+      path: ""
+    values:
+      layout: mine
