--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ redcarpet:
 plugins:
   - jekyll-sitemap
   - jekyll-feed
+  - jekyll-seo-tag
 permalink: /posts/:categories/:year-:month-:day-:title.html
 collections:
   posts_data:
